# SearchEverywhere

./: .gitignore  CMakeLists.txt  README.md  README_en.md  README_zh.md  buildAppImage.sh  main.cc  main.cpp  orient  seev_es.ts  seev_fr.ts  seev_zh_CN.ts
assets/: CMakeLists.txt  SearchEverywhere.desktop  seev.qss  seev_rsc.qrc  win_ico.rc
assets/search_img/: stolenLogo.icns
docs/: TODO.md  conf_file.md
previewer/: CMakeLists.txt  previewer.cpp  previewer.h  previewer.hpp  previewer.ui
previewer/imagePreviewer/: imagepreviewer.cpp  imagepreviewer.h
previewer/mediaPreviewer/: mediapreviewer.cpp  mediapreviewer.h  mediapreviewer.hpp  playercontrols.cpp  playercontrols.h  videowidget.cpp  videowidget.h
previewer/mediaPreviewer/5/: mediapreviewer.cpp  mediapreviewer.h  playercontrols.cpp  playercontrols.h
previewer/mediaPreviewer/6/: mediapreviewer.cpp  mediapreviewer.h
previewer/previewFailTxt/: ax.md  previewFailTxt.qrc
util/: fileinfomodel.cpp  fileinfomodel.hpp
widgets/: homepagewidget.cpp  homepagewidget.hpp  homepagewidget.ui  locatejobwidget.cpp  locatejobwidget.hpp  locatejobwidget.ui  navwidget.cpp  navwidget.hpp  navwidget.ui  orieconfwidget.cpp  orieconfwidget.hpp  orieconfwidget.ui  oriepredselector.cpp  oriepredselector.hpp  oriepredselector.ui  startpathconfwidget.ui
